# slm

./: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml  try_agent.py  verify_self_learning.py
.github/workflows/: auto-release.yml
docs/: api.html  api.md  index.html
papers/: 1703.03400_maml.html  1703.03400_maml.txt  2210.14215_ad.html  2210.14215_ad.txt  2501.00663_titans.html  2501.00663_titans.txt  2512.23675.html  2512.23675.txt  nvidia_robottt.html  nvidia_robottt.txt
scripts/: build_corpus.py  eval_strands.py  meta_train.py  train_lora.py
slm/: __init__.py  qwen.py  strands_model.py  tools.py
tests/: test_gate.py  test_key_weights.py  test_merge_math.py  test_slm_agent.py
